--- a/src/styles/pages/certificate.scss
+++ b/src/styles/pages/certificate.scss
@@ -39,7 +39,7 @@
 }
 
 // Smallest device
-@media (min-width: 100px) and (max-width: 575px) {
+@media (min-width: 100px) {
     .cards-certificate {
         grid-template-columns: 1fr 1fr;
     }
